# OGDT_multi_lidar_calibration

./: README.md
planeGridMapMatching/: build.m
planeGridMapMatching/cpp/: estimateExtrinsic2dMapDtMatchingCeresMex.cpp
planeGridMapMatching/demo/: script_estimate_extrinsic_2dDTMatching_CERES_four.m
planeGridMapMatching/func/: calc_dt_loss.m  estimate_deltaZRP_from_groundPlane.m  estimate_deltaZRP_from_mountZRP.m  estimate_extrinsic_2dDTMatching_CERES.m  gen_occupancyGridMap_DT.m  points2d_project2map.m  points2d_transform.m
planeGridMapMatching/scripts/: script_estimate_extrinsic_2dDTMatching_CERES.m
tools/: prescan_readme.md
tools/catkin_ws/src/ALOAM/: CMakeLists.txt
tools/catkin_ws/src/ALOAM/launch/: aloam_line32_sharingVAN_lidar1.launch  aloam_line32_sharingVAN_lidar2.launch  aloam_line32_sharingVAN_lidar3.launch  aloam_line32_sharingVAN_lidar4.launch
tools/catkin_ws/src/ALOAM/rviz_cfg/: aloam_velodyne_lidar1.rviz  aloam_velodyne_lidar2.rviz  aloam_velodyne_lidar3.rviz  aloam_velodyne_lidar4.rviz
tools/catkin_ws/src/ALOAM/src/: kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
tools/catkin_ws/src/lidar_calibration_ui/: CMakeLists.txt  package.xml
tools/catkin_ws/src/lidar_calibration_ui/launch/: multi_lidar_concate_ui.launch
tools/catkin_ws/src/lidar_calibration_ui/src/: mainwindow.cpp  mainwindow.h  multi_lidar_concate_ui_node.cpp
tools/catkin_ws/src/lidar_calibration_ui/src/ui/: ui_mainwindow.h
tools/catkin_ws/src/linefit_ground_segmentation/linefit_ground_segmentation/: CMakeLists.txt
tools/catkin_ws/src/linefit_ground_segmentation/linefit_ground_segmentation_ros/: CMakeLists.txt
tools/catkin_ws/src/linefit_ground_segmentation/linefit_ground_segmentation_ros/launch/: segmentation.launch  segmentation_params.yaml
tools/catkin_ws/src/linefit_ground_segmentation/linefit_ground_segmentation_ros/src/: ground_segmentation_node.cc
tools/catkin_ws/src/multi_lidar_concate/: CMakeLists.txt  package.xml
tools/catkin_ws/src/multi_lidar_concate/launch/: multi_lidar_concate_four.launch  multi_lidar_concate_two.launch
tools/catkin_ws/src/multi_lidar_concate/rviz/: multi_lidar_concate_four.rviz  multi_lidar_concate_two.rviz
tools/catkin_ws/src/multi_lidar_concate/src/: multi_lidar_concate_four.cpp  multi_lidar_concate_two.cpp
tools/catkin_ws/src/multi_lidar_split_save/: CMakeLists.txt  package.xml
tools/catkin_ws/src/multi_lidar_split_save/launch/: multi_lidar_split_save_four.launch
tools/catkin_ws/src/multi_lidar_split_save/src/: multi_lidar_split_save_four.cpp
tools/catkin_ws/src/prescan_simulink_ros_multi_lidar_calibration/: CMakeLists.txt  README.md  package.xml
tools/catkin_ws/src/prescan_simulink_ros_multi_lidar_calibration/launch/: demo_multi_lidar_data_save.launch
tools/catkin_ws/src/prescan_simulink_ros_multi_lidar_calibration/scripts/: multi_lidar_data_save.py
tools/matlab/config/: leishen-32.config
tools/matlab/func/: extract_sync_pointCloud_from_rosbag.m  fan_overlapping_estimate.m  forward_backward_projection_error.m  pose_from_transform_matrix.m  removeInf.m  transform_matrix_from_pose.m  transform_matrix_from_pose_quat.m
tools/matlab/interface/: loadPoseYaml.m  outputPoseYaml.m
tools/matlab/scripts/: gen_pointcloud_vertical_angle_config.m  gen_trajectory_relative_from_absolute.m
tools/matlab/scripts/prescan/: gen_calib_before_leveling.m  gen_calib_gt_leveling.m  gen_pointcloud_map_from_trajectory_absolute.m  gen_pointcloud_map_from_trajectory_relative.m  gen_sync_data_from_timestamp.m  gen_trajectory_from_pose.m  gen_transform_from_relative_pose.m  vis_delta_pose_relative.m  vis_pointcloud_map_relative_merged.m
tools/matlab/test/: test_extract_pointcloud_from_rosbag.m  test_pointcloud_concate.m
tools/matlab/test/ceres_example/: build.m
tools/matlab/test/ceres_example/cpp/: curveFittingCeresMex.cpp
tools/matlab/test/ceres_example/test/: test_curveFittingCeres.m
tools/matlab/utils/cloudSegmentation/cpp/: projectPointCloudMex.cpp
tools/matlab/utils/cloudSegmentation/func/: cloudSegmentation.m  distanceMatSegmentation.m  groundRemove.m
tools/matlab/utils/interface/: getByteIndexForField_.m  getFieldCount_.m  getFieldDatatype_.m  getFieldNameIndex_.m  getFieldOffset_.m  readAllFieldNames_.m  readFieldFromData_.m  readIntensity.m  readRing.m  rosToMATLABType_.m
tools/matlab/utils/linefit_ground_segmentation/func/: linefit_ground_segment.m
tools/matlab/utils/pointCloud2OccupancyGridMap/: build.m
tools/matlab/utils/pointCloud2OccupancyGridMap/cpp/: laserscan2OccupancyGridMex.cpp  laserscanSectorOverlappingMex.cpp  levelingPoints2OccupancyGridMex.cpp  points3dSectorOverlappingMex.cpp
tools/matlab/utils/pointCloud2OccupancyGridMap/func/: convert_laserscan_to_occupancyGridMap.m  convert_occupancyGridMap_to_laserscan.m  laserscanSectorOverlapping.m  laserscanSectorOverlappingTransformed.m  levelingPoints2OccupancyGrid.m  points2OccupancyGrid.m  points2OccupancyGridBin.m  points3dSectorOverlapping.m  points3dSectorOverlappingTransformed.m
tools/matlab/utils/pointCloud2OccupancyGridMap/test/: test_laserscanSectorOverlapping.m  test_points2OccupancyGrid.m  test_points2OccupancyGridBin.m
tools/matlab/val/: val_relativePose_from_absolutePose.m
tools/matlab/vis/: vis_calibrated_concate_points.m  vis_calibrated_concate_points_leveling_four.m
tools/python/rosbag/: multi_lidar_full_sync2bag.py  multi_lidar_sync2bag.py
