<?xml version="1.0"?>
<package format="2">
    <name>multi_lidar_concate</name>
    <version>1.7.0</version>
    <description>The multi_lidar_concate package concate the lidar points according to the transformation</description>

    <maintainer email="ccyinlu@whu.edu.cn">ethan</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>

    <test_depend>rosunit</test_depend>

    <export></export>
</package>
